// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should component receive props 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkloadByStepCard
        page={1}
        pageSize={10}
        processId={35315}
      >
        <Panel
          className="container-fluid-1280 mt-4"
        >
          <div
            className="container-fluid-1280 mt-4"
          >
            <div
              className="panel panel-secondary"
            >
              <Header
                elementClasses="dashboard-panel-header"
              >
                <div
                  className="panel-header dashboard-panel-header"
                  data-testid="panelHeader"
                >
                  <div>
                    <div>
                      <span
                        className="mr-2"
                      >
                        workload-by-step
                      </span>
                      <TooltipProvider>
                        <span
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          <span
                            className="workflow-tooltip"
                            data-tooltip-align="right"
                            title="workload-by-step-description"
                          >
                            <Icon
                              iconName="question-circle-full"
                            >
                              <svg
                                className="lexicon-icon lexicon-icon-question-circle-full"
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#question-circle-full\\" />",
                                  }
                                }
                                data-testid="icon"
                                focusable="false"
                                role="presentation"
                              />
                            </Icon>
                          </span>
                        </span>
                      </TooltipProvider>
                    </div>
                  </div>
                </div>
              </Header>
              <Body>
                <div
                  className="panel-body"
                  data-testid="panelBody"
                >
                  <ListView
                    className="border-0"
                    emptyActionButton={<ReloadButton />}
                    emptyMessageClassName="small"
                    emptyMessageText="there-are-no-pending-items-at-the-moment"
                    errorMessageText={null}
                    fetching={false}
                    hideAnimation={true}
                    loading={true}
                  >
                    <div>
                      <LoadingState>
                        <div
                          className="border-1 pb-6 pt-6 sheet"
                          data-testid="loadingState"
                        >
                          <span
                            aria-hidden="true"
                            className="loading-animation"
                          />
                        </div>
                      </LoadingState>
                    </div>
                  </ListView>
                </div>
              </Body>
            </div>
          </div>
        </Panel>
      </WorkloadByStepCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should component shows empty state when items is undefined 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkloadByStepCard>
        <Panel
          className="container-fluid-1280 mt-4"
        >
          <div
            className="container-fluid-1280 mt-4"
          >
            <div
              className="panel panel-secondary"
            >
              <Header
                elementClasses="dashboard-panel-header"
              >
                <div
                  className="panel-header dashboard-panel-header"
                  data-testid="panelHeader"
                >
                  <div>
                    <div>
                      <span
                        className="mr-2"
                      >
                        workload-by-step
                      </span>
                      <TooltipProvider>
                        <span
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          <span
                            className="workflow-tooltip"
                            data-tooltip-align="right"
                            title="workload-by-step-description"
                          >
                            <Icon
                              iconName="question-circle-full"
                            >
                              <svg
                                className="lexicon-icon lexicon-icon-question-circle-full"
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#question-circle-full\\" />",
                                  }
                                }
                                data-testid="icon"
                                focusable="false"
                                role="presentation"
                              />
                            </Icon>
                          </span>
                        </span>
                      </TooltipProvider>
                    </div>
                  </div>
                </div>
              </Header>
              <Body>
                <div
                  className="panel-body"
                  data-testid="panelBody"
                >
                  <ListView
                    className="border-0"
                    emptyActionButton={<ReloadButton />}
                    emptyMessageClassName="small"
                    emptyMessageText="there-are-no-pending-items-at-the-moment"
                    errorMessageText={null}
                    fetching={false}
                    hideAnimation={true}
                    loading={true}
                  >
                    <div>
                      <LoadingState>
                        <div
                          className="border-1 pb-6 pt-6 sheet"
                          data-testid="loadingState"
                        >
                          <span
                            aria-hidden="true"
                            className="loading-animation"
                          />
                        </div>
                      </LoadingState>
                    </div>
                  </ListView>
                </div>
              </Body>
            </div>
          </div>
        </Panel>
      </WorkloadByStepCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component 1`] = `
<MockRouter
  client={
    Object {
      "delete": [Function],
      "get": [Function],
      "post": [Function],
      "put": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "match": Object {
            "params": Object {
              "page": 1,
              "sort": undefined,
            },
          },
          "pathname": "/processes/1/10/title%3Aasc",
          "search": "?backPath=%2F",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "match": Object {
                "params": Object {
                  "page": 1,
                  "sort": undefined,
                },
              },
              "pathname": "/processes/1/10/title%3Aasc",
              "search": "?backPath=%2F",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "match": Object {
              "params": Object {
                "page": 1,
                "sort": undefined,
              },
            },
            "pathname": "/processes/1/10/title%3Aasc",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <WorkloadByStepCard
        page={1}
        pageSize={10}
        processId={35315}
      >
        <Panel
          className="container-fluid-1280 mt-4"
        >
          <div
            className="container-fluid-1280 mt-4"
          >
            <div
              className="panel panel-secondary"
            >
              <Header
                elementClasses="dashboard-panel-header"
              >
                <div
                  className="panel-header dashboard-panel-header"
                  data-testid="panelHeader"
                >
                  <div>
                    <div>
                      <span
                        className="mr-2"
                      >
                        workload-by-step
                      </span>
                      <TooltipProvider>
                        <span
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          <span
                            className="workflow-tooltip"
                            data-tooltip-align="right"
                            title="workload-by-step-description"
                          >
                            <Icon
                              iconName="question-circle-full"
                            >
                              <svg
                                className="lexicon-icon lexicon-icon-question-circle-full"
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#question-circle-full\\" />",
                                  }
                                }
                                data-testid="icon"
                                focusable="false"
                                role="presentation"
                              />
                            </Icon>
                          </span>
                        </span>
                      </TooltipProvider>
                    </div>
                  </div>
                </div>
              </Header>
              <Body>
                <div
                  className="panel-body"
                  data-testid="panelBody"
                >
                  <ListView
                    className="border-0"
                    emptyActionButton={<ReloadButton />}
                    emptyMessageClassName="small"
                    emptyMessageText="there-are-no-pending-items-at-the-moment"
                    errorMessageText={null}
                    fetching={false}
                    hideAnimation={true}
                    loading={true}
                  >
                    <div>
                      <LoadingState>
                        <div
                          className="border-1 pb-6 pt-6 sheet"
                          data-testid="loadingState"
                        >
                          <span
                            aria-hidden="true"
                            className="loading-animation"
                          />
                        </div>
                      </LoadingState>
                    </div>
                  </ListView>
                </div>
              </Body>
            </div>
          </div>
        </Panel>
      </WorkloadByStepCard>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component with empty data 1`] = `
<div
  className="container-fluid-1280 mt-4"
>
  <div
    className="panel panel-secondary"
  >
    <div
      className="panel-header dashboard-panel-header"
      data-testid="panelHeader"
    >
      <div>
        <div>
          <span
            className="mr-2"
          >
            workload-by-step
          </span>
          <span
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="workflow-tooltip"
              data-tooltip-align="right"
              title="workload-by-step-description"
            >
              <svg
                className="lexicon-icon lexicon-icon-question-circle-full"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#question-circle-full\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="panel-body"
      data-testid="panelBody"
    >
      <div>
        <div
          className="border-1 pb-6 pt-6 sheet"
          data-testid="loadingState"
        >
          <span
            aria-hidden="true"
            className="loading-animation"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render component with error state 1`] = `
<div
  className="container-fluid-1280 mt-4"
>
  <div
    className="panel panel-secondary"
  >
    <div
      className="panel-header dashboard-panel-header"
      data-testid="panelHeader"
    >
      <div>
        <div>
          <span
            className="mr-2"
          >
            workload-by-step
          </span>
          <span
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="workflow-tooltip"
              data-tooltip-align="right"
              title="workload-by-step-description"
            >
              <svg
                className="lexicon-icon lexicon-icon-question-circle-full"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<use xlink:href=\\"http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#question-circle-full\\" />",
                  }
                }
                data-testid="icon"
                focusable="false"
                role="presentation"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      className="panel-body"
      data-testid="panelBody"
    >
      <div>
        <div
          className="border-1 pb-6 pt-6 sheet"
          data-testid="loadingState"
        >
          <span
            aria-hidden="true"
            className="loading-animation"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
